Gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: argocd-gateway
  namespace: argocd
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - argocd-local.<MY_DOMAIN>  # Change this to your domain
    port:
      name: http
      number: 80
      protocol: HTTP
    tls:
      httpsRedirect: true
  - hosts:
    - argocd-local.<MY_DOMAIN> # Change this to your domain
    port:
      name: https
      number: 443
      protocol: HTTPS
    tls:
      credentialName: argocd-tls-secret
      mode: SIMPLE
